# ChatBot-ML

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py
app/api/: main.py
app/core/: config.py
app/domain/: __init__.py  interfaces.py  models.py
app/pipelines/: ingest_and_index.py  retrieve_and_answer.py  transcribe_and_ingest.py
app/providers/embeddings/: base.py  local_hash_embeddings.py  openai_embeddings.py
app/providers/llm/: base.py
app/providers/vectorstore/: faiss_store.py
app/services/: answer_service.py  chunk_service.py  conversation_context.py  course_router.py  embedding_factory.py  image_context_service.py  index_service.py  ingest_service.py  retrieve_service.py
app/transcription/: manifest.py
app/transcription/engines/: __init__.py  base.py  whisper_he.py  whisper_he_engine.py
scripts/: ingest_local.py  run_api.py  run_ui.py  transcribe_local.py
tests/: test_answer_language_policy.py  test_api_smoke.py  test_conversation_context.py  test_course_router.py  test_image_followup_language.py  test_indexing_smoke.py  test_ingest_and_chunk.py  test_openai_embeddings_batching.py  test_retrieve_answer_smoke.py  test_smalltalk_response.py  test_transcription_pipeline.py  test_whisper_he_fallback.py
ui/: streamlit_app.py
